# stockoverflow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INDICATORS.md  Makefile  README.md  ROADMAP.md  USER_GUIDE.md  docker-compose.yml  fly.toml  main.py  pyproject.toml  railway.toml
.github/workflows/: ci.yml
backend/: auth.py  backtest_engine.py  backup.py  cache.py  config.py  conversation_service.py  data_sources.py  database.py  errors.py  factor_engine.py  fear_greed.py  financials_service.py  indicators.py  llm_service.py  logging_config.py  main.py  market_service.py  models.py  news_service.py  paper_trading.py  request_queue.py  schemas.py  stock_service.py  watchlist_service.py  websocket_manager.py
docs/archive/: ROADMAP_PHASE2_v1.md
frontend/: index.html
frontend/locales/: en.json  zh.json
tests/: test_api.py  test_backtest.py  test_edge_cases.py  test_factor_engine.py  test_indicators.py
